# TaskManagementServiceWithinTheCompany.

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
management/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
management/accounts/migrations/: 0001_initial.py
management/main/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
management/main/migrations/: 0001_initial.py
management/management/: settings.py  urls.py
